kubernetes/apps/oauth2-proxy/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - oauth2-proxy.piny940.com
  rules:
    - host: oauth2-proxy.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
